--- a/cvct.html
+++ b/cvct.html
@@ -7,6 +7,12 @@
   <title>Curriculun Vitae Cesar</title>
 </head>
 <body>
-  
+  <header>
+  <nav>
+    <a>ENCABEZADO CENTRADO</a>
+  </nav>
+  </header>
+  <section></section>
+  <footer></footer>
 </body>
 </html>
