Se agregan datos a la sección de Conocimiento, datos generales

--- a/cvct.html
+++ b/cvct.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Curriculum Vitae</title>
 </head>
-<body>
+<body >
   <center>
     <header>
       <h1>Cesar Tamayo</h1>
@@ -16,7 +16,7 @@
     <hr>
     <Section>
       <h1>Experiencia</h1>
-      <table>
+      <table border="1">
         <tr>
         <th>Empresa</th>
         <th>Actividad de la Empresa</th>
@@ -73,7 +73,7 @@
         <td>Cable Wireless Panama</td>
         <td>Telecomunicaciones</td>
         <td>Soporte Técnico</td>
-        <td>Brindar soporte técnico a el persnal en campo y a los clientes para restablecer servicio de telefonía, internet y TV</td>
+        <td>Brindar soporte técnico a el personal en campo y a los clientes para restablecer servicio de telefonía, internet y TV</td>
         <td>Sep 2021 - Actualidad</td>
       </tr>
       </table>
@@ -81,14 +81,30 @@
     <hr>
     <section>
       <h2>Educación</h2>
+      <ol>
+        <li>Escuela primaria Victor Perez Flores Título Educación primaria</li>
+        <li>Escuela Secundaria Premedia José De Los Reyes Vásquez Título Premedia</li>
+        <li>Escuela Secundaria Ángel María Herrera Bachiller en ciencias</li>
+        <li>Universidad Tecnológica de Panamá cursando actualmente licenciatura en Desarrollo de Software</li>
+      </ol>
     </section>
     <hr>
     <Section>
-      <h2>Conocimimientos</h2>
-    </Section>
+      <h2>Conocimientos</h2>
+      <p>Manejo de herramientas de inventario</p>
+      <p>Conocimiento en sistemas de impresión</p>
+      <p>Entrega de informes de inventario</p>
+      <p>Conocimiento de herramientas ofimáticas</p>
+      <p>Conocimiento de herramientas de Telecomunicaciones</p>
+      <p>Configuración de Módems, servicio de telefonía y cajas de TV remotamente</p>
     <hr>
     <section>
       <h2>Datos Generales</h2>
+      <p>Nacionalidad: Panama</p>
+      <p>Fecha de nacimiento: 08/08/1995</p>
+      <p>Género: Masculino</p>
+      <p>Estado civil: Soltero/a</p>
+      <p>Dirección: Panamá Oeste, La Herradura</p>  
     </section>
     <hr>
     <Section>
