Actualización de la sección Objetivo laboral

--- a/cvct.html
+++ b/cvct.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Curriculum Vitae</title>
 </head>
-<body >
+<body bgcolor="white" text="blue">
   <center>
     <header>
       <h1>Cesar Tamayo</h1>
       <h2>Soporte Técnico</h2>
       <img src="https://img.freepik.com/vector-premium/ilustracion-vector-prueba-curriculum-vitae_138676-242.jpg?w=740" alt="" width="300" height="300">
     </header>
+  </center>
     <hr>
     <Section>
       <h1>Experiencia</h1>
@@ -108,8 +109,8 @@
     </section>
     <hr>
     <Section>
-      <h2>Sección abierta de prueba</h2>
+      <h2>Objetivo laboral</h2>
+      <p>Emprendedor en busca de conocimiento en diversas áreas para adquirir destrezas que me ayuden a mejorar mis objetivo</p>
     </Section>
-  </center>
 </body>
 </html>
