--- a/cvct.html
+++ b/cvct.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Curriculum Vitae</title>
 </head>
-<body bgcolor="white" text="blue">
+<body bgcolor="white" text="black">
   <center>
     <header>
       <h1>Cesar Tamayo</h1>
@@ -17,22 +17,22 @@
     <hr>
     <Section>
       <h1>Experiencia</h1>
-      <table border="1">
-        <tr>
-        <th>Empresa</th>
-        <th>Actividad de la Empresa</th>
-        <th>Puesto de trabajo</th>
-        <th>Descripción del puesto</th>
-        <th>Periodo</th>
+      <table width="100% "border="1">
+        <tr style="background-color:darkblue">
+        <th><font color="white">Empresa</font></th>
+        <th><font color="white">Actividad de la Empresa</font></th>
+        <th><font color="white">Puesto de trabajo</font></th>
+        <th><font color="white">Descripción del puesto</font></th>
+        <th><font color="white">Periodo</font></th>
       </tr>
-      <tr>
+      <tr style="background-color: #EBF5FB">
         <td>Farmacias Arrocha</td>
         <td>Venta de articulos selecionados e impresión</td>
         <td>Servicio de impresión</td>
         <td>Brindar atención al cliente en el área de impresión, realizar surtido de mercancia, realizar inventario</td>
         <td>Ene 2015 - Mar 2015</td>
       </tr>
-      <tr>
+      <tr style="background-color: #EBF5FB">
         <td>Office Depot Panama</td>
         <td>Venta de Articulos de oficina, cómputo, escolares, muebles, electrónica e impresión</td>
         <td>Auxiliar General</td>
@@ -41,7 +41,7 @@
         </td>
         <td>Nov 2015 - Ene 2017</td>
       </tr>
-      <tr>
+      <tr style="background-color: #EBF5FB">
         <td>Office Depot Panama</td>
         <td>Venta de Articulos de oficina, cómputo, escolares, muebles, electrónica e impresión</td>
         <td>Supervisor de Ventas</td>
@@ -49,28 +49,28 @@
         </td>
         <td>Ene 2017 - Sep 2017</td>
       </tr>
-      <tr>
+      <tr style="background-color: #EBF5FB">
         <td>Office Depot Panama</td>
         <td>Venta de Articulos de oficina, cómputo, escolares, muebles, electrónica e impresión</td>
         <td>Supervisor de bodega</td>
         <td>Recibir proveedores nacionales e internacionales(Contenedores). Revisión de productos fisicamente para ingresarlos al sistema de inventario. Realizar recolección de mercancía para transferencias entre sucursales. Realizar reportes semanales de conteos y capturas de mercancía para el jefe inmediato. Acomodar mercancía en la bodega. Coordinar cita con los proovedores para fecha de entrega de ordenes de compra Manejar inventarios</td>
         <td>Sep 2017 - Feb 2018</td>
       </tr>
-      <tr>
+      <tr style="background-color: #EBF5FB">
         <td>YoyTec Computer</td>
         <td>Venta de Articulos cómputo y electrónica </td>
         <td>Auxiliar General</td>
         <td>Realizar inventarios de mercancía, Entrega de Pedidos, Revisión y Surtido del área asignada, limpieza de aréas de trabajo, colaborar con vendedores en la búsqueda de mercancía.</td>
         <td>Feb 2018 - May 2018</td>
       </tr>
-      <tr>
+      <tr style="background-color: #EBF5FB">
         <td>Cable Wireless Panama</td>
         <td>Telecomunicaciones</td>
         <td>Agente de Call Center</td>
         <td>Agendar Llamadas telefónicas, asignar fecha de atenciones a los clientes, coordinar la logistica de citas de los reportes a nivel nacionales</td>
         <td>May 2018 - Sep 2021</td>
       </tr>
-      <tr>
+      <tr style="background-color: #EBF5FB" >
         <td>Cable Wireless Panama</td>
         <td>Telecomunicaciones</td>
         <td>Soporte Técnico</td>
@@ -81,6 +81,7 @@
     </Section>
     <hr>
     <section>
+      <center>
       <h2>Educación</h2>
       <ol>
         <li>Escuela primaria Victor Perez Flores Título Educación primaria</li>
@@ -88,9 +89,11 @@
         <li>Escuela Secundaria Ángel María Herrera Bachiller en ciencias</li>
         <li>Universidad Tecnológica de Panamá cursando actualmente licenciatura en Desarrollo de Software</li>
       </ol>
+    </center>
     </section>
     <hr>
     <Section>
+      <center>
       <h2>Conocimientos</h2>
       <p>Manejo de herramientas de inventario</p>
       <p>Conocimiento en sistemas de impresión</p>
@@ -98,19 +101,32 @@
       <p>Conocimiento de herramientas ofimáticas</p>
       <p>Conocimiento de herramientas de Telecomunicaciones</p>
       <p>Configuración de Módems, servicio de telefonía y cajas de TV remotamente</p>
+    </center>
     <hr>
     <section>
+      <center>
       <h2>Datos Generales</h2>
       <p>Nacionalidad: Panama</p>
       <p>Fecha de nacimiento: 08/08/1995</p>
       <p>Género: Masculino</p>
-      <p>Estado civil: Soltero/a</p>
-      <p>Dirección: Panamá Oeste, La Herradura</p>  
+      <p>Estado civil: Soltero</p>
+      <p>Dirección: Panamá Oeste, La Herradura</p> 
+    </center> 
     </section>
     <hr>
     <Section>
+      <center>
       <h2>Objetivo laboral</h2>
       <p>Emprendedor en busca de conocimiento en diversas áreas para adquirir destrezas que me ayuden a mejorar mis objetivo</p>
     </Section>
+  </center>
+  <hr>
+<footer>
+  <center>
+  <p>Autor: César Tamayo</p>
+  <p>Creando mi primera página</p>
+  <a href="https://github.com/CsarRodriguez" target="_blank">GitHub</a>
+</center>
+</footer>
 </body>
 </html>
