Se agregan detalles

--- a/cvct.html
+++ b/cvct.html
@@ -1,29 +1,50 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Curriculum Vitae</title>
 </head>
+
 <body bgcolor="white" text="black">
   <center>
     <header>
-      <h1>Cesar Tamayo</h1>
-      <h2>Soporte Técnico</h2>
-      <img src="https://img.freepik.com/vector-premium/ilustracion-vector-prueba-curriculum-vitae_138676-242.jpg?w=740" alt="" width="300" height="300">
+      <h4>Home</h4>
+      <h1>CV: Cesar Tamayo</h1>
+      <h5>Dale click a los nombre para conocer a nuestros socios</h5>
+      <li> <a href="">
+          <font color="blue">Alesandro Marcconi</font>
+        </a></li>
+      <li><a href="">
+          <font color="blue">Claudio Wilkey</font>
+        </a></li>
+      <h5>Soporte Técnico</h5>
+      <img src="https://img.freepik.com/vector-premium/ilustracion-vector-prueba-curriculum-vitae_138676-242.jpg?w=740"
+        alt="" width="300" height="300" border="5">
     </header>
   </center>
-    <hr>
-    <Section>
-      <h1>Experiencia</h1>
-      <table width="100% "border="1">
-        <tr style="background-color:darkblue">
-        <th><font color="white">Empresa</font></th>
-        <th><font color="white">Actividad de la Empresa</font></th>
-        <th><font color="white">Puesto de trabajo</font></th>
-        <th><font color="white">Descripción del puesto</font></th>
-        <th><font color="white">Periodo</font></th>
+  <hr size="5px" color="green">
+  <Section style="background-color:cornflowerblue">
+    <h1>Experiencia</h1>
+    <table>
+      <tr style="background-color:darkblue">
+        <th>
+          <font color="white">Empresa</font>
+        </th>
+        <th>
+          <font color="white">Actividad de la Empresa</font>
+        </th>
+        <th>
+          <font color="white">Puesto de trabajo</font>
+        </th>
+        <th>
+          <font color="white">Descripción del puesto</font>
+        </th>
+        <th>
+          <font color="white">Periodo</font>
+        </th>
       </tr>
       <tr style="background-color: #EBF5FB">
         <td>Farmacias Arrocha</td>
@@ -33,8 +54,8 @@
         <td>Ene 2015 - Mar 2015</td>
       </tr>
       <tr style="background-color: #EBF5FB">
-        <td>Office Depot Panama</td>
-        <td>Venta de Articulos de oficina, cómputo, escolares, muebles, electrónica e impresión</td>
+        <td rowspan="3">Office Depot Panama</td>
+        <td rowspan="3">Venta de Articulos de oficina, cómputo, escolares, muebles, electrónica e impresión</td>
         <td>Auxiliar General</td>
         <td>Realizar surtido de mercancía en las distintas secciones, brindar atención al cliente, realizar
           inventarios de mercancia, rotular la mercancia en stock, rotular los precios.
@@ -42,91 +63,119 @@
         <td>Nov 2015 - Ene 2017</td>
       </tr>
       <tr style="background-color: #EBF5FB">
-        <td>Office Depot Panama</td>
-        <td>Venta de Articulos de oficina, cómputo, escolares, muebles, electrónica e impresión</td>
         <td>Supervisor de Ventas</td>
-        <td>Abordar a los clientes para atender sus consultas, realizar la venta de computadoras de escritorio y portatiles, disco duros, programas office, antivirus, televisores, celulares, tablets, cámaras profesionales, videojuegos, equipos de sonido, impresoras, multifuncionales, escáner, realizar inventarios anuales y semanales existencia física vs existencia en sistema.
+        <td>Abordar a los clientes para atender sus consultas, realizar la venta de computadoras de escritorio y
+          portatiles, disco duros, programas office, antivirus, televisores, celulares, tablets, cámaras profesionales,
+          videojuegos, equipos de sonido, impresoras, multifuncionales, escáner, realizar inventarios anuales y
+          semanales existencia física vs existencia en sistema.
         </td>
         <td>Ene 2017 - Sep 2017</td>
       </tr>
       <tr style="background-color: #EBF5FB">
-        <td>Office Depot Panama</td>
-        <td>Venta de Articulos de oficina, cómputo, escolares, muebles, electrónica e impresión</td>
         <td>Supervisor de bodega</td>
-        <td>Recibir proveedores nacionales e internacionales(Contenedores). Revisión de productos fisicamente para ingresarlos al sistema de inventario. Realizar recolección de mercancía para transferencias entre sucursales. Realizar reportes semanales de conteos y capturas de mercancía para el jefe inmediato. Acomodar mercancía en la bodega. Coordinar cita con los proovedores para fecha de entrega de ordenes de compra Manejar inventarios</td>
+        <td>Recibir proveedores nacionales e internacionales(Contenedores). Revisión de productos fisicamente para
+          ingresarlos al sistema de inventario. Realizar recolección de mercancía para transferencias entre sucursales.
+          Realizar reportes semanales de conteos y capturas de mercancía para el jefe inmediato. Acomodar mercancía en
+          la bodega. Coordinar cita con los proovedores para fecha de entrega de ordenes de compra Manejar inventarios
+        </td>
         <td>Sep 2017 - Feb 2018</td>
       </tr>
       <tr style="background-color: #EBF5FB">
         <td>YoyTec Computer</td>
         <td>Venta de Articulos cómputo y electrónica </td>
         <td>Auxiliar General</td>
-        <td>Realizar inventarios de mercancía, Entrega de Pedidos, Revisión y Surtido del área asignada, limpieza de aréas de trabajo, colaborar con vendedores en la búsqueda de mercancía.</td>
+        <td>Realizar inventarios de mercancía, Entrega de Pedidos, Revisión y Surtido del área asignada, limpieza de
+          aréas de trabajo, colaborar con vendedores en la búsqueda de mercancía.</td>
         <td>Feb 2018 - May 2018</td>
       </tr>
       <tr style="background-color: #EBF5FB">
-        <td>Cable Wireless Panama</td>
-        <td>Telecomunicaciones</td>
+        <td rowspan="4">Cable Wireless Panama</td>
+        <td rowspan="5">Telecomunicaciones</td>
         <td>Agente de Call Center</td>
-        <td>Agendar Llamadas telefónicas, asignar fecha de atenciones a los clientes, coordinar la logistica de citas de los reportes a nivel nacionales</td>
+        <td>Agendar Llamadas telefónicas, asignar fecha de atenciones a los clientes, coordinar la logistica de citas de
+          los reportes a nivel nacionales</td>
         <td>May 2018 - Sep 2021</td>
       </tr>
-      <tr style="background-color: #EBF5FB" >
-        <td>Cable Wireless Panama</td>
-        <td>Telecomunicaciones</td>
+      <tr style="background-color: #EBF5FB">
         <td>Soporte Técnico</td>
-        <td>Brindar soporte técnico a el personal en campo y a los clientes para restablecer servicio de telefonía, internet y TV</td>
+        <td>Brindar soporte técnico a el personal en campo y a los clientes para restablecer servicio de telefonía,
+          internet y TV</td>
         <td>Sep 2021 - Actualidad</td>
       </tr>
-      </table>
-    </Section>
-    <hr>
-    <section>
-      <center>
-      <h2>Educación</h2>
-      <ol>
-        <li>Escuela primaria Victor Perez Flores Título Educación primaria</li>
-        <li>Escuela Secundaria Premedia José De Los Reyes Vásquez Título Premedia</li>
-        <li>Escuela Secundaria Ángel María Herrera Bachiller en ciencias</li>
-        <li>Universidad Tecnológica de Panamá cursando actualmente licenciatura en Desarrollo de Software</li>
-      </ol>
-    </center>
-    </section>
-    <hr>
-    <Section>
-      <center>
-      <h2>Conocimientos</h2>
-      <p>Manejo de herramientas de inventario</p>
-      <p>Conocimiento en sistemas de impresión</p>
-      <p>Entrega de informes de inventario</p>
-      <p>Conocimiento de herramientas ofimáticas</p>
-      <p>Conocimiento de herramientas de Telecomunicaciones</p>
-      <p>Configuración de Módems, servicio de telefonía y cajas de TV remotamente</p>
-    </center>
-    <hr>
-    <section>
-      <center>
-      <h2>Datos Generales</h2>
-      <p>Nacionalidad: Panama</p>
-      <p>Fecha de nacimiento: 08/08/1995</p>
-      <p>Género: Masculino</p>
-      <p>Estado civil: Soltero</p>
-      <p>Dirección: Panamá Oeste, La Herradura</p> 
-    </center> 
-    </section>
-    <hr>
-    <Section>
-      <center>
-      <h2>Objetivo laboral</h2>
-      <p>Emprendedor en busca de conocimiento en diversas áreas para adquirir destrezas que me ayuden a mejorar mis objetivo</p>
-    </Section>
+    </table>
+  </Section>
+  <hr size="5px" color="green">
+  <section>
+    <font color="darkblue">
+      <fieldset>
+        <center>
+          <h2>Educación</h2>
+          <ul>
+            <li>Escuela primaria Victor Perez Flores Título Educación primaria</li>
+            <li>Escuela Secundaria Premedia José De Los Reyes Vásquez Título Premedia</li>
+            <li>Escuela Secundaria Ángel María Herrera Bachiller en ciencias</li>
+            <li><a href="https://utp.ac.pa/" target="_blank">Universidad Tecnológica de Panamá</a> cursando actualmente
+              <a href="https://fisc.utp.ac.pa/licenciatura-en-desarrollo-de-software" target="_blank">licenciatura en
+                Desarrollo de Software</a> </li>
+            <img src="https://utp.ac.pa/sites/default/files/tropical_utp_logo.jpg" alt="" width="100" height="100">
+          </ul>
+        </center>
+      </fieldset>
+    </font>
+  </section>
+  <hr size="5px" color="green">
+  <Section style="background-color:darkblue">
+    <font color="white">
+      <fieldset>
+        <center>
+          <h2>Conocimientos</h2>
+          <p>Manejo de herramientas de inventario</p>
+          <p>Conocimiento en sistemas de impresión</p>
+          <p>Entrega de informes de inventario</p>
+          <p>Conocimiento de herramientas ofimáticas</p>
+          <p>Conocimiento de herramientas de Telecomunicaciones</p>
+          <p>Configuración de Módems, servicio de telefonía y cajas de TV remotamente</p>
+        </center>
+      </fieldset>
+    </font>
+  </Section>
+  <hr size="5px" color="green">
+  <section>
+    <font color="darkblue">
+      <fieldset>
+        <center>
+          <h2>Datos Generales</h2>
+          <p>Nacionalidad: Panama</p>
+          <p>Fecha de nacimiento: 08/08/1995</p>
+          <p>Género: Masculino</p>
+          <p>Estado civil: Soltero</p>
+          <p>Dirección: Panamá Oeste, La Herradura</p>
+        </center>
+      </fieldset>
+    </font>
+  </section>
+  <hr size="5px" color="green">
+  <Section style="background-color:darkblue">
+    <font color="white">
+      <fieldset>
+        <center>
+          <h2>Objetivo laboral</h2>
+          <p>Emprendedor en busca de conocimiento en diversas áreas para adquirir destrezas que me ayuden a mejorar mis
+            objetivo</p>
+      </fieldset>
+    </font>
+  </Section>
   </center>
-  <hr>
-<footer>
-  <center>
-  <p>Autor: César Tamayo</p>
-  <p>Creando mi primera página</p>
-  <a href="https://github.com/CsarRodriguez" target="_blank">GitHub</a>
-</center>
-</footer>
+  <hr size="5px" color="green">
+  <footer>
+    <fieldset>
+      <legend align="center">Autor: César Tamayo</legend>
+      <center>
+        <p>Creando mi primera página</p>
+        <a href="https://github.com/CsarRodriguez" target="_blank">GitHub</a>
+    </fieldset>
+    </center>
+  </footer>
 </body>
+
 </html>
