--- a/cvct.html
+++ b/cvct.html
@@ -14,10 +14,10 @@
       <h4>Home</h4>
       <h1>CV: Cesar Tamayo</h1>
       <h5>Dale click a los nombre para conocer a nuestros socios</h5>
-      <li> <a href="">
+      <li> <a href="C:\Users\ace\Documents\Universidad\Desarrollo_De_Software_IV\Laboratorio\LAB_3\GL-122F\GL-122F\cvam.html"">
           <font color="blue">Alesandro Marcconi</font>
         </a></li>
-      <li><a href="">
+      <li><a href="C:\Users\ace\Documents\Universidad\Desarrollo_De_Software_IV\Laboratorio\LAB_3\GL-122F\GL-122F\cvcw.html">
           <font color="blue">Claudio Wilkey</font>
         </a></li>
       <h5>Soporte Técnico</h5>
