Se corrige archivo dejandon solo etiquetas html

--- a/cvct.html
+++ b/cvct.html
@@ -8,52 +8,43 @@
   <title>Curriculum Vitae</title>
 </head>
 
-<body bgcolor="white" text="black">
+<body>
   <center>
     <header>
       <h4>Home</h4>
       <h1>CV: Cesar Tamayo</h1>
       <h5>Dale click a los nombre para conocer a nuestros socios</h5>
-      <li> <a href="C:\Users\ace\Documents\Universidad\Desarrollo_De_Software_IV\Laboratorio\LAB_3\GL-122F\GL-122F\cvam.html"">
-          <font color="blue">Alesandro Marcconi</font>
-        </a></li>
-      <li><a href="C:\Users\ace\Documents\Universidad\Desarrollo_De_Software_IV\Laboratorio\LAB_3\GL-122F\GL-122F\cvcw.html">
-          <font color="blue">Claudio Wilkey</font>
-        </a></li>
+      <li> <a
+          href="C:\Users\ace\Documents\Universidad\Desarrollo_De_Software_IV\Laboratorio\LAB_3\GL-122F\GL-122F\cvam.html">Alesandro
+          Marcconi</a></li>
+      <li><a href="C:\Users\ace\Documents\Universidad\Desarrollo_De_Software_IV\Laboratorio\LAB_3\GL-122F\GL-122F\cvcw.html
+        
+        
+        ">Claudio Wilkey</a></li>
       <h5>Soporte Técnico</h5>
       <img src="https://img.freepik.com/vector-premium/ilustracion-vector-prueba-curriculum-vitae_138676-242.jpg?w=740"
         alt="" width="300" height="300" border="5">
     </header>
   </center>
-  <hr size="5px" color="green">
-  <Section style="background-color:cornflowerblue">
+  <hr>
+  <Section>
     <h1>Experiencia</h1>
     <table>
-      <tr style="background-color:darkblue">
-        <th>
-          <font color="white">Empresa</font>
-        </th>
-        <th>
-          <font color="white">Actividad de la Empresa</font>
-        </th>
-        <th>
-          <font color="white">Puesto de trabajo</font>
-        </th>
-        <th>
-          <font color="white">Descripción del puesto</font>
-        </th>
-        <th>
-          <font color="white">Periodo</font>
-        </th>
+      <tr>
+        <th>Empresa</th>
+        <th>Actividad de la Empresa</th>
+        <th>Puesto de trabajo</th>
+        <th>Descripción del puesto</th>
+        <th>Periodo</th>
       </tr>
-      <tr style="background-color: #EBF5FB">
+      <tr>
         <td>Farmacias Arrocha</td>
         <td>Venta de articulos selecionados e impresión</td>
         <td>Servicio de impresión</td>
         <td>Brindar atención al cliente en el área de impresión, realizar surtido de mercancia, realizar inventario</td>
         <td>Ene 2015 - Mar 2015</td>
       </tr>
-      <tr style="background-color: #EBF5FB">
+      <tr>
         <td rowspan="3">Office Depot Panama</td>
         <td rowspan="3">Venta de Articulos de oficina, cómputo, escolares, muebles, electrónica e impresión</td>
         <td>Auxiliar General</td>
@@ -62,7 +53,7 @@
         </td>
         <td>Nov 2015 - Ene 2017</td>
       </tr>
-      <tr style="background-color: #EBF5FB">
+      <tr>
         <td>Supervisor de Ventas</td>
         <td>Abordar a los clientes para atender sus consultas, realizar la venta de computadoras de escritorio y
           portatiles, disco duros, programas office, antivirus, televisores, celulares, tablets, cámaras profesionales,
@@ -71,7 +62,7 @@
         </td>
         <td>Ene 2017 - Sep 2017</td>
       </tr>
-      <tr style="background-color: #EBF5FB">
+      <tr>
         <td>Supervisor de bodega</td>
         <td>Recibir proveedores nacionales e internacionales(Contenedores). Revisión de productos fisicamente para
           ingresarlos al sistema de inventario. Realizar recolección de mercancía para transferencias entre sucursales.
@@ -80,7 +71,7 @@
         </td>
         <td>Sep 2017 - Feb 2018</td>
       </tr>
-      <tr style="background-color: #EBF5FB">
+      <tr>
         <td>YoyTec Computer</td>
         <td>Venta de Articulos cómputo y electrónica </td>
         <td>Auxiliar General</td>
@@ -88,7 +79,7 @@
           aréas de trabajo, colaborar con vendedores en la búsqueda de mercancía.</td>
         <td>Feb 2018 - May 2018</td>
       </tr>
-      <tr style="background-color: #EBF5FB">
+      <tr>
         <td rowspan="4">Cable Wireless Panama</td>
         <td rowspan="5">Telecomunicaciones</td>
         <td>Agente de Call Center</td>
@@ -96,7 +87,7 @@
           los reportes a nivel nacionales</td>
         <td>May 2018 - Sep 2021</td>
       </tr>
-      <tr style="background-color: #EBF5FB">
+      <tr>
         <td>Soporte Técnico</td>
         <td>Brindar soporte técnico a el personal en campo y a los clientes para restablecer servicio de telefonía,
           internet y TV</td>
@@ -104,69 +95,54 @@
       </tr>
     </table>
   </Section>
-  <hr size="5px" color="green">
+  <hr>
   <section>
-    <font color="darkblue">
-      <fieldset>
-        <center>
-          <h2>Educación</h2>
-          <ul>
-            <li>Escuela primaria Victor Perez Flores Título Educación primaria</li>
-            <li>Escuela Secundaria Premedia José De Los Reyes Vásquez Título Premedia</li>
-            <li>Escuela Secundaria Ángel María Herrera Bachiller en ciencias</li>
-            <li><a href="https://utp.ac.pa/" target="_blank">Universidad Tecnológica de Panamá</a> cursando actualmente
-              <a href="https://fisc.utp.ac.pa/licenciatura-en-desarrollo-de-software" target="_blank">licenciatura en
-                Desarrollo de Software</a> </li>
-            <img src="https://utp.ac.pa/sites/default/files/tropical_utp_logo.jpg" alt="" width="100" height="100">
-          </ul>
-        </center>
-      </fieldset>
-    </font>
+    <center>
+      <h2>Educación</h2>
+      <ul>
+        <li>Escuela primaria Victor Perez Flores Título Educación primaria</li>
+        <li>Escuela Secundaria Premedia José De Los Reyes Vásquez Título Premedia</li>
+        <li>Escuela Secundaria Ángel María Herrera Bachiller en ciencias</li>
+        <li><a href="https://utp.ac.pa/" target="_blank">Universidad Tecnológica de Panamá</a> cursando actualmente
+          <a href="https://fisc.utp.ac.pa/licenciatura-en-desarrollo-de-software" target="_blank">licenciatura en
+            Desarrollo de Software</a>
+        </li>
+        <img src="https://utp.ac.pa/sites/default/files/tropical_utp_logo.jpg" alt="" width="100" height="100">
+      </ul>
+    </center>
   </section>
-  <hr size="5px" color="green">
-  <Section style="background-color:darkblue">
-    <font color="white">
-      <fieldset>
-        <center>
-          <h2>Conocimientos</h2>
-          <p>Manejo de herramientas de inventario</p>
-          <p>Conocimiento en sistemas de impresión</p>
-          <p>Entrega de informes de inventario</p>
-          <p>Conocimiento de herramientas ofimáticas</p>
-          <p>Conocimiento de herramientas de Telecomunicaciones</p>
-          <p>Configuración de Módems, servicio de telefonía y cajas de TV remotamente</p>
-        </center>
-      </fieldset>
-    </font>
+  <hr>
+  <Section>
+    <center>
+      <h2>Conocimientos</h2>
+      <p>Manejo de herramientas de inventario</p>
+      <p>Conocimiento en sistemas de impresión</p>
+      <p>Entrega de informes de inventario</p>
+      <p>Conocimiento de herramientas ofimáticas</p>
+      <p>Conocimiento de herramientas de Telecomunicaciones</p>
+      <p>Configuración de Módems, servicio de telefonía y cajas de TV remotamente</p>
+    </center>
   </Section>
-  <hr size="5px" color="green">
+  <hr>
   <section>
-    <font color="darkblue">
-      <fieldset>
-        <center>
-          <h2>Datos Generales</h2>
-          <p>Nacionalidad: Panama</p>
-          <p>Fecha de nacimiento: 08/08/1995</p>
-          <p>Género: Masculino</p>
-          <p>Estado civil: Soltero</p>
-          <p>Dirección: Panamá Oeste, La Herradura</p>
-        </center>
-      </fieldset>
-    </font>
+      <center>
+        <h2>Datos Generales</h2>
+        <p>Nacionalidad: Panama</p>
+        <p>Fecha de nacimiento: 08/08/1995</p>
+        <p>Género: Masculino</p>
+        <p>Estado civil: Soltero</p>
+        <p>Dirección: Panamá Oeste, La Herradura</p>
+      </center>
   </section>
-  <hr size="5px" color="green">
-  <Section style="background-color:darkblue">
-    <font color="white">
-      <fieldset>
-        <center>
-          <h2>Objetivo laboral</h2>
-          <p>Emprendedor en busca de conocimiento en diversas áreas para adquirir destrezas que me ayuden a mejorar mis
-            objetivo</p>
-      </fieldset>
-    </font>
+  <hr>
+  <Section>
+      <center>
+        <h2>Objetivo laboral</h2>
+        <p>Emprendedor en busca de conocimiento en diversas áreas para adquirir destrezas que me ayuden a mejorar mis
+          objetivo</p>
   </Section>
   </center>
-  <hr size="5px" color="green">
+  <hr>
   <footer>
     <fieldset>
       <legend align="center">Autor: César Tamayo</legend>
