--- a/index.html
+++ b/index.html
@@ -22,69 +22,60 @@
     <div class="lab6-div">
       <div class="fondo-div"></div>
       <div class="header-div">
-        <div class="alessandro-div">
-          <button class="alessandro-marconi-button">Alessandro Marconi</button>
+        <div class="button-div">
+          <button class="header-button">Alessandro Marconi</button>
         </div>
-        <div class="alessandro-div">
-          <button class="claudio-wilkley-button">Claudio Wilkley</button>
+        <div class="button-div">
+          <button class="header-button">Claudio Wilkley</button>
         </div>
-        <div class="cesar-div">
-          <button class="claudio-wilkley-button">Cesar Rodriguez</button>
+        <div class="button-div">
+          <button class="header-button">Cesar Rodriguez</button>
         </div>
       </div>
       <div class="maincont-div">
-        <div class="laboratorio-6-css-positions-a">
-          <p class="lorem-ipsum-dolor">Laboratorio #6</p>
-          <p class="css-positions-and">CSS Positions and Floating</p>
+        <div class="lab6posi">
+          <p class="txtclass1">Laboratorio #6</p>
+          <p>CSS Positions and Floating</p>
         </div>
         <div class="articulos-div">
-          <a class="articulo-1" id="articulo1Link"
+          <a class="articulo-C" id="articulo1Link"
             ><img
               class="placeholder-icon"
               alt=""
               src="public/placeholder@2x.png"
-            /><b class="lorem-ipsum-dolor-sit-amet-co"
-              ><span class="lorem-ipsum-dolor-container"
-                ><p class="lorem-ipsum-dolor">
+            /><b class="txtpos1"
+                ><p class="txtclass1">
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
                   do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                </p>
-                <p class="css-positions-and">&nbsp;</p></span
-              ></b
+                </p></b
             ></a
-          ><a class="articulo-3" id="articulo3Link"
+          ><a class="articulo-C" id="articulo3Link"
             ><img
               class="placeholder-icon"
               alt=""
               src="public/placeholder@2x.png"
-            /><b class="lorem-ipsum-dolor-sit-amet-co"
-              ><span class="lorem-ipsum-dolor-container"
-                ><p class="lorem-ipsum-dolor">
+            /><b class="txtpos1"
+                ><p class="txtclass1">
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
                   do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                </p>
-                <p class="css-positions-and">&nbsp;</p></span
-              ></b
+                </p></b
             ></a
-          ><a class="articulo-3" id="articulo2Link"
+          ><a class="articulo-C" id="articulo2Link"
             ><img
               class="placeholder-icon"
               alt=""
               src="public/placeholder@2x.png"
-            /><b class="lorem-ipsum-dolor-sit-amet-co"
-              ><span class="lorem-ipsum-dolor-container"
-                ><p class="lorem-ipsum-dolor">
+            /><b class="txtpos1"
+                ><p class="txtclass1">
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
                   do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                </p>
-                <p class="css-positions-and">&nbsp;</p></span
-              ></b
+                </p></b
             ></a
           >
         </div>
         <div class="imagen-div">
           <img class="image-1-icon" alt="" src="public/image-1@2x.png" /><i
-            class="profe-necesitamos-ayudaaaaaaaa"
+            class="ayudatxt"
             >PROFE NECESITAMOS AYUDAAAAAAAAAAAAAA</i
           >
         </div>
